attempt to fix double scrollbar on mobile, this is a new issue from tonight's edits

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,8 +8,8 @@
 }
 
 html {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: auto;
 	margin: 0;
 	padding: 0;
 	scroll-behavior: smooth;
@@ -118,7 +118,7 @@ button {
 	padding: 2rem;
 	padding-left: 3rem;
 	padding-right: 3rem;
-	/* position: relative; */
+	position: relative;
 }
 
 .container {
